--- a/style.css
+++ b/style.css
@@ -100,6 +100,12 @@
 	}
 }
 
+.oscillation-figure {
+	width: 100%;
+	height: 65%;
+	position: absolute;
+}
+
 #footer {
 	-webkit-box-shadow: 0px -12px 8px rgba(221, 221, 221, 1);
     -moz-box-shadow: 0px -12px 8px rgba(221, 221, 221, 1);
@@ -109,3 +115,11 @@
 }
 
 ::-webkit-scrollbar { width: 0px; }
+
+h3 {
+	text-shadow: none;
+}
+
+a {
+	text-shadow: none;
+}
