--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ p, li {
 
 .banner {
 	padding: 0.5em;
-	background-image: url('img/EastViewFromUCM.jpg');
+	background-image: url('img/MayaPano.jpg');
 	background-size: cover;
 	background-position: center bottom;
 	background-color: lightgray;
